vyre-macros/tests/ui/bad_pass_unknown_argument.stderr
error: unsupported vyre_pass argument. Fix: use name, requires, invalidates, phase, boundary_class, requires_caps, preserves_abi, cost_model_family, or analyze.
 --> tests/ui/bad_pass_unknown_argument.rs:7:5
  |
7 |     surprise = "not allowed"
  |     ^^^^^^^^
